--- a/config/etc/confd/templates/server.conf.tmpl
+++ b/config/etc/confd/templates/server.conf.tmpl
@@ -3,8 +3,8 @@
 server {
     listen [::]:5000 ipv6only=off;
     more_set_headers "X-Frame-Options: DENY";
-    more_set_headers "Access-Control-Allow-Origin: https://{{ .vhost }}";
-    server_name {{ .vhost }};
+    more_set_headers "Access-Control-Allow-Origin: https://{{ getenv "VHOST" }}";
+    server_name {{ getenv "VHOST" }};
     location / {
         root /srv/http;
     }
